# aqa_python_junior

./: Dockerfile  README.md  config.py  conftest.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt
pages/: login_page.py
tests/: test_login.py
